--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
+    <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
 
       <div class="left-side">
     <div class ="logo">
-      <img src="./images/img-myt-logo.jpg"/>
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg">
     </div>
 <!--container for logo above -->
 
@@ -34,9 +34,9 @@
 <!--this div closes the header-->
 
 <!--content section-->
-<div class = "main-container">
+<div class ="main-container">
 <div class="column.large">
-    <div class="first box">
+    <div class="first-box">
     <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
   </div>
   <!--add border-bottom line here-->
@@ -47,7 +47,8 @@
       pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor,
       sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan.
       Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio.
-      Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+      Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque.
+      Nullam sit amet fringilla massa.</p>
     </div>
     <!--add border-bottom line here-->
 
@@ -59,27 +60,31 @@
     <div class="fourth-box">
       <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel,
         vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus.
-        Integer vitae nisi pulvinar ante accumsan...</p>
+        Integer vitae nisi pulvinar ante accumsan.</p>
       </div>
-      <!--add border-bottom line here-->
 
-    <div class="fifth-box">
+
+        <div class="fifth-box">
+          <p>Earth Spins Backwards for 2017</p>
+        </div>
+
+    <div class="sixth-box">
       <h1>Burger for Breakfast: How Early is too Early?</h1>
       <p>Mew York.MYâInterdum et malesuada fames ac ante ipsum primis in faucibus.
         Pellentesque id quam facilisis, ultrices ante ut, rutrum enim.
         Praesent eu nisl erat.</p>
       </div>
 
-      <div class="sixth-box">
+      <div class="seventh-box">
         <p>Research Shows Cameras Erase Memory</p>
       </div>
     </div>
     <!--end of separate-grouping div-->
-  </div>
+  
   <!--end of column.large div-->
 
 <div class="column.medium">
-  <div class="first-box">
+  <div class="washington-box">
   <h1>FBI Finds Action Star Guilty of False Advertising</h1>
   <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
     Nam vitae aliquam lectus. Sed tempor tortor est,
@@ -94,12 +99,12 @@
 
 <!--insert border-bottom here-->
 
-  <div class="second-box">
+  <div class="cat-box">
     <p>Cats in Control Is It a Thing?</p>
   </div>
 
 <!--Insert border-bottom here-->
-<div class="third-box">
+<div class="brooklyn-box">
   <p>BROOKLYN, NY- In molestie nulla sodales sit amet.
     Proin vulputate, ipsum porta aliquam commodo,
     nunc nibh tincidunt lorem, vel consectetur neque mi vel neque.
@@ -112,16 +117,16 @@
 <!--this div ends the column.medium div-->
 
 <div class="column.small">
-<div class="first-box">
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png"/>
+<div class="girl-box">
+  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png">
 </div>
 <!--insert border-bottom here-->
-<div class="second-box">
+<div class="emoji-box">
   <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet
     Online Illustration in Marketing Materials
     Finally a Top Secret Way You Can</p>
 </div>
-  <div class="third box">
+  <div class="empty-box">
   </div>
 
 </div>
