--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
 <!--content section-->
 <div class ="main-container">
-<div class="column.large">
-    <div class="first-box">
+  <div class="row">
+    <div class="col-md-5">
+      <div class="column.large">
+        <div class="first-box">
     <p>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</p>
   </div>
   <!--add border-bottom line here-->
@@ -53,10 +55,11 @@
     <!--add border-bottom line here-->
 
     <!--the below boxes go together and sit on page top to bottom, left to right, two columns of two-->
-    <div class="separate-grouping">
+
     <div class="third-box">
-      <h1>Orca Spends Vacation at Land World Puget</h1>
+      <h1><span>Orca Spends Vacation at Land World Puget</span></h1>
 </div>
+
     <div class="fourth-box">
       <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel,
         vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus.
@@ -69,7 +72,7 @@
         </div>
 
     <div class="sixth-box">
-      <h1>Burger for Breakfast: How Early is too Early?</h1>
+      <h1><span>Burger for Breakfast: How Early is too Early?</span></h1>
       <p>Mew York.MYâInterdum et malesuada fames ac ante ipsum primis in faucibus.
         Pellentesque id quam facilisis, ultrices ante ut, rutrum enim.
         Praesent eu nisl erat.</p>
@@ -78,14 +81,19 @@
       <div class="seventh-box">
         <p>Research Shows Cameras Erase Memory</p>
       </div>
-    </div>
-    <!--end of separate-grouping div-->
-  
-  <!--end of column.large div-->
 
+    </div>
+  </div>
+</div>
+
+    <!--end of separate-grouping div-->
+
+  <!--end of column.large div-->
+  <div class="row">
+    <div class="col-md-5">
 <div class="column.medium">
   <div class="washington-box">
-  <h1>FBI Finds Action Star Guilty of False Advertising</h1>
+  <h1><span>FBI Finds Action Star Guilty of False Advertising<span></h1>
   <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
     Nam vitae aliquam lectus. Sed tempor tortor est,
     nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem,
@@ -112,13 +120,18 @@
     dui est sodales sapien, a vestibulum velit diam eget felis.
     Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
 </div>
-<!--insert border-bottom here-->
-</div>
-<!--this div ends the column.medium div-->
 
+</div>
+</div>
+</div>
+<!--insert border-bottom here-->
+
+<!--this div ends the column.medium div-->
+<div class="row">
+  <div class="col-md-5">
 <div class="column.small">
-<div class="girl-box">
-  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png">
+<div class="cookie-box">
+  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png">
 </div>
 <!--insert border-bottom here-->
 <div class="emoji-box">
@@ -130,8 +143,9 @@
   </div>
 
 </div>
-<!--this div ends column.small box-->
-
+</div>
+</div>
+</div>
 </div>
 <!--this div ends the main container>
 
